Fix navbar spacing

--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -77,7 +77,7 @@ hr {
   display: flex;
   height: 70px;
   left: 0px;
-  padding: 16px 54px;
+  padding: 16px 62px;
   position: fixed;
   top: 0px;
   width: 100%;
@@ -95,7 +95,7 @@ hr {
   color: #000;
   font-size: 24px;
   font-weight: 700;
-  padding: 0px 16px;
+  padding: 0px 8px;
 }
 
 /* Navbar logo hover */
